feat: migrate and stabilize Discord Rich Presence and Scrobbling patches